Fix contrast of button hover colors
And standardizes all button active states to Dark Gray.

cfpb/design-manual#603

--- a/src/cf-buttons/src/cf-buttons.less
+++ b/src/cf-buttons/src/cf-buttons.less
@@ -12,8 +12,8 @@
 // .btn
 @btn-text:                      @white;
 @btn-bg:                        @pacific;
-@btn-bg-hover:                  @pacific-80;
-@btn-bg-active:                 @navy-80;
+@btn-bg-hover:                  @dark-pacific;
+@btn-bg-active:                 @dark-gray;
 
 // .btn__secondary
 @btn__secondary-text:           @white;
@@ -24,8 +24,8 @@
 // .btn__warning
 @btn__warning-text:             @white;
 @btn__warning-bg:               @red;
-@btn__warning-bg-hover:         @red-80;
-@btn__warning-bg-active:        @dark-red;
+@btn__warning-bg-hover:         @dark-red;
+@btn__warning-bg-active:        @dark-gray;
 
 // .btn__disabled
 @btn__disabled-text:            @gray;
